fixing horizontal scroll bug

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,7 +4,7 @@
   font-family: 'Roboto';
 }
 
-div.container-fluid {
+.layout-wrapper {
   padding: 0px;
   overflow-x: hidden;
 }
